--- a/Harvard/Page05.html
+++ b/Harvard/Page05.html
@@ -244,7 +244,7 @@ html { overflow: visible; }
 						<td class="s12" colspan="2" dir="ltr">
 							藍牙耳機。（失主請洽詢管理室領回）</td>
 						<td class="s13" dir="ltr">
-							健身房。</td>
+							健身房拾獲。</td>
 						<td class="s11" dir="ltr">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#unchecked-checkbox-id"></use></svg></td>
 						<td class="s11" dir="ltr">
@@ -260,7 +260,7 @@ html { overflow: visible; }
 						<td class="s14" colspan="2" dir="ltr">
 							絨毛娃娃。（失主請洽詢管理室領回）</td>
 						<td class="s15" dir="ltr">
-							大廳椅子。</td>
+							大廳椅子拾獲。</td>
 						<td class="s8" dir="ltr">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#unchecked-checkbox-id"></use></svg></td>
 						<td class="s8" dir="ltr">
