--- a/Harvard/index.html
+++ b/Harvard/index.html
@@ -804,7 +804,10 @@ html { overflow: visible; }
 						<td class="s9" dir="ltr">
 							公設</td>
 						<td class="s12" dir="ltr">
-							B棟10樓對講機故障。（多戶反映）</td>
+							B棟10樓對講機故障。（多戶反映）<br />
+							維修編號：03051710。<br />
+							維修編號：03131503。<br />
+							維修編號：03131504。</td>
 						<td class="s12" dir="ltr">
 							1️⃣03/13報修廠商。</td>
 						<td class="s9">
