--- a/Harvard/index.html
+++ b/Harvard/index.html
@@ -662,7 +662,7 @@ html { overflow: visible; }
 						<td class="s13" dir="ltr">
 							公設</td>
 						<td class="s14" dir="ltr">
-							B棟14樓對獎機故障。</td>
+							B棟14樓對講機故障。</td>
 						<td class="s14" dir="ltr">
 							🆗01/30廠商維修更換電源供應器。</td>
 						<td class="s13" dir="ltr">
