--- a/Harvard/index.html
+++ b/Harvard/index.html
@@ -804,16 +804,17 @@ html { overflow: visible; }
 						<td class="s9" dir="ltr">
 							公設</td>
 						<td class="s12" dir="ltr">
-							B棟10樓對講機故障。（多戶反映）<br />
+							B棟10樓對講機故障。（3戶反映）<br />
 							維修編號：03051710。<br />
 							維修編號：03131503。<br />
 							維修編號：03131504。</td>
-						<td class="s12" dir="ltr">
-							1️⃣03/13報修廠商。</td>
-						<td class="s9">
-							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#unchecked-checkbox-id"></use></svg></td>
-						<td class="s9">
-							&nbsp;</td>
+						<td class="s14" dir="ltr">
+							1️⃣03/13報修廠商。<br />
+							🆗03/14廠商維修更換電源供應器。</td>
+						<td class="s13" dir="ltr">
+							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#checked-checkbox-id"></use></svg></td>
+						<td class="s13" dir="ltr">
+							2024/03/14</td>
 						<td class="s3">
 							&nbsp;</td>
 					</tr>
